- Fixed bug #48802 (printf() returns incorrect outputted length)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@284649 c90b9560-bf6c-de11-be94-00142212c4b1